Bug 982464 - Disable extension functionality after a context lost happens. r=jgilbert