content/canvas/src/WebGLExtensionDebugShaders.cpp
@@ -26,6 +26,11 @@ void
 WebGLExtensionDebugShaders::GetTranslatedShaderSource(WebGLShader* shader,
                                                       nsAString& retval)
 {
+    if (mIsLost) {
+        return mContext->ErrorInvalidOperation("getTranslatedShaderSource: "
+                                               "Extension is lost.");
+    }
+
     mContext->GetShaderTranslatedSource(shader, retval);
 
     if (retval.IsVoid()) {
