content/canvas/src/WebGLExtensionInstancedArrays.cpp
@@ -25,6 +25,9 @@ void
 WebGLExtensionInstancedArrays::DrawArraysInstancedANGLE(GLenum mode, GLint first,
                                                         GLsizei count, GLsizei primcount)
 {
+    if (mIsLost)
+        return mContext->ErrorInvalidOperation("drawArraysInstancedANGLE: Extension is lost.");
+
     mContext->DrawArraysInstanced(mode, first, count, primcount);
 }
 
@@ -33,12 +36,18 @@ WebGLExtensionInstancedArrays::DrawElementsInstancedANGLE(GLenum mode, GLsizei c
                                                           GLenum type, WebGLintptr offset,
                                                           GLsizei primcount)
 {
+    if (mIsLost)
+        return mContext->ErrorInvalidOperation("drawElementsInstancedANGLE: Extension is lost.");
+
     mContext->DrawElementsInstanced(mode, count, type, offset, primcount);
 }
 
 void
 WebGLExtensionInstancedArrays::VertexAttribDivisorANGLE(GLuint index, GLuint divisor)
 {
+    if (mIsLost)
+        return mContext->ErrorInvalidOperation("vertexAttribDivisorANGLE: Extension is lost.");
+
     mContext->VertexAttribDivisor(index, divisor);
 }
 
